--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli -d ./src/database/datasource.migration.ts",
+    "typeorm:prod": "node ./node_modules/typeorm/cli -d ./dist/database/datasource.migration.js",
+    "typeorm:migration:run": "npm run typeorm:prod migration:run",
+    "typeorm:migration:generate": "npm run typeorm migration:generate",
+    "typeorm:migration:create": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli migration:create",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -36,11 +41,11 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.1",
-    "pg-connection-string": "^2.7.0",
     "pgs": "^0.0.7",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
