--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
+    "dayjs": "^1.11.13",
     "joi": "^17.13.3",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
